# pytestroll

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/.ipynb_checkpoints/: website-checkpoint.ipynb  website_v2 copy-checkpoint.ipynb
examples/website/: website.stan
notebooks/: website.ipynb
notebooks/.ipynb_checkpoints/: Website Example-checkpoint.ipynb
src/pytestroll/: __init__.py  pytestroll 2.py  pytestroll.py  pytestroll_class.py  utils.py
tests/: test_PyTestroll.py
