[tool.poetry]
name = "pytestroll"
version = "0.1.0"
description = "Profit Maximizing A/B Testing"
authors = ["Leo Guelman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.3"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = {version = "^1.8.1", python = " >=3.8.3,<3.11"}
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
